<resources>
    <string name="app_name">Shoe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="description">Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level
       </string>

    <string name="description2">Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level
        \n
    Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level
        \n
    Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level
        \n
    Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level
        \n
    Most of the time, people are first attracted to the visual appearance of a pair of shoes,
        so make high-resolution photos of your shoes the focal point of your ad. Some consumers might be hesitant to buy
        shoes online, so including detailed images – the kinds that show you every stitch on the shoe – will give people a feel
        of the comfort level </string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="Save">Save</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_discrption">description</string>
    <string name="logut">Logout</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>